# mint-ensemble-manager/swagger.json
@@ -3765,14 +3765,9 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "subtasks": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Subtask"
-                      }
-                    }
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Subtask"
                   }
                 }
               }
